rusqlite-macros/tests/compile-fail/bad-sql-syntax.rs
use rusqlite_macros::validate;

fn main() {
    validate!("SELECT");
}
